--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:padding="5dp"
+    android:id="@+id/linear_layout"
+    android:textAlignment="center"
+    android:layout_width="75dp"
+    android:layout_height="75dp">
 
     <TextView
-        android:id="@+id/tv_group"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:id="@+id/info_text"
+        android:layout_width="88dp"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"
+        android:textAlignment="center"
+        android:gravity="center"
         android:fontFamily="cursive"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        />
+        android:textSize="30dp" />
+
 </LinearLayout>
