--- a/app/src/main/res/layout/fragment_answer_user.xml
+++ b/app/src/main/res/layout/fragment_answer_user.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.poker.Fragments.AnswerQuestion"
+    tools:context="com.example.poker.Fragments.AnswerUser"
     xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
         android:orientation="vertical"
