--- a/app/src/main/res/layout/fragment_answer_user.xml
+++ b/app/src/main/res/layout/fragment_answer_user.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="monospace"
+            android:fontFamily="cursive"
             android:layout_marginTop="20dp"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="30dp"
