--- a/app/src/main/res/layout/question_list_item.xml
+++ b/app/src/main/res/layout/question_list_item.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="monospace"
+        android:fontFamily="cursive"
         android:textSize="25dp"
         android:textColor="@color/colorPrimaryDark"
         android:layout_marginLeft="10dp"
